show the stop button even if the VM haven't started yet, only availability expectation is set
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -81,7 +81,7 @@
 							<button type="button"
 							        class="btn btn-default glyphicon glyphicon-stop"
 							        ng-click="stopVm()"
-							        ng-if="vmdyn.status == 'Up'"
+							        ng-if="vmdyn.status == 'Up' || hasAvailabilityExpectation()"
 							        ng-disabled="workingprg"
 							        uib-tooltip="Stop this VM"
 							        tooltip-placement="bottom">
